# nurby

./: .env.example  .gitignore  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: launch.json
alembic/: env.py
dev/: fake-cctv.sh  start.sh
docs/: agent-design.md  agent-eval.md  api.md  devices.md  findanything-design.md  guardian-build-plan.md  har-design.md  mcp.md  mobile-plan.md  native-audio-conversation-design.md  onboarding-review.md  releasing.md  remote-access-design.md  sequence-rules-design.md  traffic-monitoring.md  updating.md  ux-review-2026-07-12.md  vlm-enrichment-design.md  vss-learnings-plan.md  webhooks.md
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
integrations/: __init__.py
mobile/: README.md  pubspec.yaml
scripts/: dedupe_people.py  fix_real_photos.py  ground_seed_with_vlm.py  seed_demo_data.py  seed_eval_db.py  seed_guardian_ss.py  seed_screenshots.py  setup-grounding.sh  smoke_onboarding.sh  webcam_bridge.sh
services/: recap.py
shared/: app_settings.py  auth.py  camera_access.py  camera_secrets.py  clock.py  component_health.py  config.py  database.py  ffmpeg_safe.py  heartbeat.py  models.py  netpolicy.py  paths.py  push.py  reasoning.py  redis_keys.py  rule_schema.py  schemas.py  timezone.py
testing/: FINDINGS.md  state.json
tests/: _engine_helpers.py  test_actions.py  test_agent_analyzer.py  test_agent_budget.py  test_agent_driver.py  test_agent_eval.py  test_agent_routes.py  test_agent_runs.py  test_agent_setup_tools.py  test_agent_tools.py  test_api_keys.py  test_audio_conversation_analyzer.py  test_audio_mock_e2e.py  test_audio_retention_paths.py  test_audio_router_controls.py  test_audio_shared_resources.py  test_audio_vad.py  test_auth_onboarding.py  test_build_auth_url.py  test_camera_access.py  test_camera_enabled.py  test_camera_probe.py  test_camera_secrets.py  test_camera_status_trigger.py  test_detect_classes.py  test_device_action.py  (+74 more)
(+508 files in other folders)
